--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -10,3 +10,14 @@
     max-width: 95%; 
 
   }
+
+  .product-item:hover {
+    background-color: #000000;
+    color: #ffffff;
+  }
+  
+  .product-item:hover img {
+    transform: scale(1.1);
+    transition: transform 0.5s;
+  }
+  
